Cleaned up the build file and renamed main.